--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 </div>
                 <div class="input-box">
                     <input type="password" placeholder="password" required>
-                    <i class='bxs-lock-alt' ></i>
+                    <i class='bx bxs-lock-alt' ></i>
                 </div>
                 <div class="forget-link">
                     <a href="#">Forgot Password?</a>
@@ -438,7 +438,7 @@
                 </div>
                 <div class="input-box">
                     <input type="password" placeholder="password" required>
-                    <i class='bxs-lock-alt' ></i>
+                    <i class='bx bxs-lock-alt' ></i>
                 </div>
                 <button type="submit" class="btn">Register</button>
                 <p>Or register with social platforms</p>
